Fix title color for contao 5 dark mode

--- a/public/css/backend.scss
+++ b/public/css/backend.scss
@@ -5,6 +5,10 @@
   --bwein-env-color: #0F1C26;
   --bwein-login-main-color: var(--bwein-main-color, #ffffff);
   --bwein-top-main-color: var(--bwein-main-color, #eaeaec);
+  --bwein-title-color: #fff;
+}
+
+html[data-color-scheme="dark"] {
   --bwein-title-color: #ddd;
 }
 
